# sm-gco-dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.py  utils.cpp
cmake/: libigl.cmake  pybind.cmake  robin-map.cmake
gco/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h
helper/: CMakeLists.txt  graph_cycles.cpp  graph_cycles.hpp  knncpp.h  shape.cpp  shape.hpp  utils.cpp  utils.hpp  utils_data.cpp
mex/: CMakeLists.txt  cpppy_myfunc.cpp
pythonbinding/: CMakeLists.txt  pythonwrappers.cpp
src/: CMakeLists.txt  gco_shape_matching.cpp  gco_shape_matching.hpp  gco_shape_matching_pointwise.cpp  gco_shape_matching_trianglewise.cpp  gco_shape_matching_trianglewise_algorithm.cpp  gco_shape_matching_trianglewise_helpers.cpp  gco_shape_matching_trianglewise_init.cpp  my_cpp_code.cpp  my_cpp_code.hpp
src/energy/: bendingEnergy.cpp  bendingEnergy.hpp  deformationEnergy.cpp  deformationEnergy.hpp  wksEnergy.cpp  wksEnergy.hpp
